// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plugin: (options) should merge another plugin 1`] = `
Array [
  "typedoc-test-plugin-1",
  "typedoc-test-plugin-2",
  "typedoc-plugin-markdown",
]
`;

exports[`Plugin: (options) should not duplicate markdown plugin 1`] = `
Array [
  "typedoc-test-plugin",
  "typedoc-plugin-markdown",
]
`;

exports[`Plugin: (options) should set default plugin to 'typedoc-plugin-markdown' 1`] = `
Array [
  "typedoc-plugin-markdown",
]
`;

exports[`Plugin: (render) should write docs 1`] = `
Array [
  "globals.md",
  "index.md",
  "interfaces",
  "modules",
]
`;

exports[`Plugin: (sidebars) should update sidebars.js' 1`] = `
"module.exports = {
  \\"someSidebar\\": {
    \\"Docusaurus\\": [
      \\"doc1\\"
    ],
    \\"Features\\": [
      \\"mdx\\"
    ]
  },
  \\"typedoc\\": [
    {
      \\"type\\": \\"category\\",
      \\"label\\": \\"none\\",
      \\"items\\": [
        \\"api/index\\",
        \\"api/globals\\",
        {
          \\"type\\": \\"category\\",
          \\"label\\": \\"Modules\\",
          \\"items\\": [
            \\"api/modules/_theme_\\"
          ]
        },
        {
          \\"type\\": \\"category\\",
          \\"label\\": \\"Interfaces\\",
          \\"items\\": [
            \\"api/interfaces/_theme_.interfaceitema\\"
          ]
        }
      ]
    }
  ]
};"
`;
